Still some alignment issues to resolve.

--- a/style.css
+++ b/style.css
@@ -18,20 +18,34 @@ html, body {
     height: 100%;
     width: 100%;
 }
-.section {
+.section, .info {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     background-color: #000;
     transition: background-color 0.5s ease;
     width: 25%;
 }
-.section:hover {
-    background-color: #ce4f20;
+
+.info  {
+    /*padding-top: 100px;*/
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+}
+.info .top {
+    flex-grow: 1.5;
+}
+.info img {
+    position: absolute;
+    top: -170px;
+    left: calc(50% - 75px)
+}
+.info .bottom {
+    flex-grow: 1;
 }
 .section .top {
-    flex-grow: 1;
+    flex-grow: 1.5;
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -39,33 +53,48 @@ html, body {
     transition: flex-grow 0.5s ease, margin-bottom 0.5s ease;
     margin-bottom: 50px;
 }
-.section .top h1 {
+.section .top .inner {
+    position: relative;
+    flex-direction: column;
+}
+.section .top .inner h1, .info h1 {
     margin: 0;
     font-weight: 300;
-    border-bottom: solid 1px #333;
-    line-height: 70px;
-    padding: 0 10px;
+    font-size: 40px;
+    text-align: center;
     color: #ce4f20;
-    transition: width 0.5s ease, color 0.5s ease, border-bottom-color 0.5s ease;
+    width: 100%;
 }
-.section:hover .top {
+.section .top .inner h1 {
+    transition: width 0.5s ease, color 0.5s ease;
+}
+.section .top .inner hr, .info hr {
+    margin: 30px auto;
+    width: 40%;
+    border: 0 none;
+    border-top: 1px solid rgba(206, 79, 32, 0.25);
+}
+.section .top .inner p, .info p {
+    font-weight: 300;
+    font-size: 18px;
+    padding: 0 20px;
+    text-align: center;
+    color: #FFF;
+}
+.section.content:hover {
+    background-color: #ce4f20;
+}
+.section.content:hover .top {
     flex-grow: 0;
     margin-bottom: 0;
 }
-.section:hover .top h1 {
-    color: #FFF;
-    border-bottom-color: #9a3c1c;
-    width: 100%;
-    text-align: center;
+.section .bottom {
+    flex-grow: 1;
 }
 .section .bottom {
-    flex-grow: 0;
-    height: 200px;
-    /*background-color: rgba(255, 255, 255, 0.54);*/
     transition: flex-grow 0.5s ease;
-    flex-basis: 200px;
-    /*overflow: hidden;*/
     overflow-y: scroll;
+    height: 200px;
 }
 .section .bottom ul {
     margin: 0;
@@ -79,6 +108,28 @@ html, body {
 .section:hover .bottom {
     flex-grow: 1;
 
+}
+.info .bottom {
+    overflow: hidden;
+    width: 60%;
+}
+.info .social {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.info .social a {
+    flex-grow: 1;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    font-size: 22px;
+    text-decoration: none;
+    color: rgba(206, 79, 32, 0.50);
+    transition: color 0.5s ease;
+}
+.info .social a:hover {
+    color: #ce4f20;
 }
 @media (max-width:  900px) {
     .frame {
